# task-06---threads-AsherMentzer

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Consumer.h  Message.h  Producer.h
src/: CMakeLists.txt  Consumer.cpp  Message.cpp  Producer.cpp  main.cpp
task_8_Asher_Mentzer/: CMakeLists.txt  task_8_Asher_Mentzer.cpp  task_8_Asher_Mentzer.h
